[gd_scene load_steps=6 format=3 uid="uid://bt0ob3h3frjya"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_bya84"]
[ext_resource type="Texture2D" uid="uid://dhpeaseegkn12" path="res://icon.svg" id="1_ce4u0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xgeqb"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_haffy"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gt1bn"]

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("_cooldown_timer", "_dash_timer", "_iframes_timer", "_attack_area", "_hurt_area")]
motion_mode = 1
script = ExtResource("1_bya84")
_cooldown_timer = NodePath("CooldownTimer")
_dash_timer = NodePath("DashTimer")
_iframes_timer = NodePath("IFrameTimer")
_attack_area = NodePath("AttackArea")
_hurt_area = NodePath("HurtArea")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_ce4u0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_xgeqb")

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[node name="DashTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="IFrameTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AttackArea" type="Area2D" parent="." groups=["player_attack"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_haffy")

[node name="HurtArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("RectangleShape2D_gt1bn")

[connection signal="timeout" from="CooldownTimer" to="." method="_on_cooldown_timer_timeout"]
[connection signal="timeout" from="DashTimer" to="." method="end_dash"]
[connection signal="area_entered" from="HurtArea" to="." method="_on_hurt_area_area_entered"]
